--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Portfolio - Vivian</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="css/home_style.css">
+  <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -154,6 +156,9 @@
       <p>&copy; 2024 Vivian. Designed with ❤️</p>
     </div>
   </footer>
+
+  <script src="js/home_scpt.js"></script>
+
 </body>
 
 </html>
